Modified entrypoints